--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <strong>BiliBili (Premium)</strong>
                     <span>Version 1.0 | Size: 30 KB</span>
                 </div>
-                <a href="./verification_files/BiliBili.txt" download>
+                <a href="BiliBili.txt" download>
                     <i class="fas fa-cloud-download-alt"></i> DOWNLOAD VERIFICATION FILE
                 </a>
             </li>
@@ -226,7 +226,7 @@
                     <strong>NETFLY (Premium)</strong>
                     <span>Version 1.0.1 | Size: 45 KB</span>
                 </div>
-                <a href="./verification_files/Netfly.txt" download>
+                <a href="Netfly.txt" download>
                     <i class="fas fa-cloud-download-alt"></i> DOWNLOAD VERIFICATION FILE
                 </a>
             </li>
